excel-to-records/main/default/objects/ExcelToRecords_FieldMapping__mdt/ExcelToRecords_FieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>Excel to Records - Field Mapping</label>
    <pluralLabel>Excel to Records - Field Mappings</pluralLabel>
</CustomObject>