excel-to-records/main/default/objects/ExcelToRecords_FieldMapping__mdt/fields/ExcelColumn__c.field-meta.xml
<CustomField>
    <fullName>ExcelColumn__c</fullName>
    <label>Excel Column</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>