excel-to-records/main/default/objects/ExcelToRecords_FieldMapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>ExcelToRecords_Object__mdt</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>FieldMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>