excel-to-records/main/default/objects/ExcelToRecords_FieldMapping__mdt/fields/SalesforceField__c.field-meta.xml
<CustomField>
    <fullName>SalesforceField__c</fullName>
    <inlineHelpText>Salesforce standard or custom field&#39;s API name.</inlineHelpText>
    <label>Salesforce Field</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>