excel-to-records/main/default/objects/ExcelToRecords_FieldMapping__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Object__c</columns>
    <columns>ExcelColumn__c</columns>
    <columns>SalesforceField__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>